Changed filenames to remove hints about the location of the sign-in/sign-out links.

--- a/demos/index-eng.html
+++ b/demos/index-eng.html
@@ -101,18 +101,18 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div class="span-4">
 <section><h2 id="share">Sign In/Out</h2>
 <ul>
-	<li><a href="signout/breadcrumb-signin-eng.html"><span class="wb-invisible">Sign In/Out - </span>English example - Breadcrumb Sign In</a></li>
-	<li><a href="signout/breadcrumb-signin-fra.html"><span class="wb-invisible">Sign In/Out - </span>French example - Breadcrumb Sign In</a></li>
-	<li><a href="signout/breadcrumb-signout-eng.html"><span class="wb-invisible">Sign In/Out - </span>English example - Breadcrumb Sign Out</a></li>
-	<li><a href="signout/breadcrumb-signout-fra.html"><span class="wb-invisible">Sign In/Out - </span>French example - Breadcrumb Sign Out</a></li>
-	<li><a href="signout/gcnav-signin-eng.html"><span class="wb-invisible">Sign In/Out - </span>English example - GC Navigation Sign In</a></li>
-	<li><a href="signout/gcnav-signin-fra.html"><span class="wb-invisible">Sign In/Out - </span>French example - GC Navigation Sign In</a></li>
-	<li><a href="signout/gcnav-signout-eng.html"><span class="wb-invisible">Sign In/Out - </span>English example - GC Navigation Sign Out</a></li>
-	<li><a href="signout/gcnav-signout-fra.html"><span class="wb-invisible">Sign In/Out - </span>French example - GC Navigation Sign Out</a></li>
-	<li><a href="signout/content-signin-eng.html"><span class="wb-invisible">Sign In/Out - </span>English example - Page Content Sign In</a></li>
-	<li><a href="signout/content-signin-fra.html"><span class="wb-invisible">Sign In/Out - </span>French example - Page Content Sign In</a></li>
-	<li><a href="signout/content-signout-eng.html"><span class="wb-invisible">Sign In/Out - </span>English example - Page Content Sign Out</a></li>
-	<li><a href="signout/content-signout-fra.html"><span class="wb-invisible">Sign In/Out - </span>French example - Page Content Sign Out</a></li>
+	<li><a href="signout/bsi-eng.html"><span class="wb-invisible">Sign In/Out - </span>English example - Breadcrumb Sign In</a></li>
+	<li><a href="signout/bsi-fra.html"><span class="wb-invisible">Sign In/Out - </span>French example - Breadcrumb Sign In</a></li>
+	<li><a href="signout/bso-eng.html"><span class="wb-invisible">Sign In/Out - </span>English example - Breadcrumb Sign Out</a></li>
+	<li><a href="signout/bso-fra.html"><span class="wb-invisible">Sign In/Out - </span>French example - Breadcrumb Sign Out</a></li>
+	<li><a href="signout/tsi-eng.html"><span class="wb-invisible">Sign In/Out - </span>English example - GC Navigation Sign In</a></li>
+	<li><a href="signout/tsi-fra.html"><span class="wb-invisible">Sign In/Out - </span>French example - GC Navigation Sign In</a></li>
+	<li><a href="signout/tso-eng.html"><span class="wb-invisible">Sign In/Out - </span>English example - GC Navigation Sign Out</a></li>
+	<li><a href="signout/tso-fra.html"><span class="wb-invisible">Sign In/Out - </span>French example - GC Navigation Sign Out</a></li>
+	<li><a href="signout/csi-eng.html"><span class="wb-invisible">Sign In/Out - </span>English example - Page Content Sign In</a></li>
+	<li><a href="signout/csi-fra.html"><span class="wb-invisible">Sign In/Out - </span>French example - Page Content Sign In</a></li>
+	<li><a href="signout/cso-eng.html"><span class="wb-invisible">Sign In/Out - </span>English example - Page Content Sign Out</a></li>
+	<li><a href="signout/cso-fra.html"><span class="wb-invisible">Sign In/Out - </span>French example - Page Content Sign Out</a></li>
 </ul>
 </section>
 </div>
