--- a/demos/index-fra.html
+++ b/demos/index-fra.html
@@ -100,18 +100,18 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div class="span-4">
 <section><h2 id="share">Ouvrir une session/Fermer la session</h2>
 <ul>
-	<li><a href="signout/gcnav-signin-eng.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en anglais - Barre de navigation du GC - Ouvrir une session</a></li>
-	<li><a href="signout/gcnav-signin-fra.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en français - Barre de navigation du GC - Ouvrir une session</a></li>
-	<li><a href="signout/gcnav-signout-eng.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en anglais - Barre de navigation du GC - Fermer la session</a></li>
-	<li><a href="signout/gcnav-signout-fra.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en français - Barre de navigation du GC - Fermer la session</a></li>
-	<li><a href="signout/content-signin-eng.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en anglais - Contenu de la page - Ouvrir une session</a></li>
-	<li><a href="signout/content-signin-fra.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en français - Contenu de la page - Ouvrir une session</a></li>
-	<li><a href="signout/content-signout-eng.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en anglais - Contenu de la page - Fermer la session</a></li>
-	<li><a href="signout/content-signout-fra.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en français - Contenu de la page - Fermer la session</a></li>
-	<li><a href="signout/breadcrumb-signin-eng.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en anglais - Fil d'ariane - Ouvrir une session</a></li>
-	<li><a href="signout/breadcrumb-signin-fra.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en français - Fil d'ariane - Ouvrir une session</a></li>
-	<li><a href="signout/breadcrumb-signout-eng.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en anglais - Fil d'ariane - Fermer la session</a></li>
-	<li><a href="signout/breadcrumb-signout-fra.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en français - Fil d'ariane - Fermer la session</a></li>
+	<li><a href="signout/tsi-eng.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en anglais - Barre de navigation du GC - Ouvrir une session</a></li>
+	<li><a href="signout/tsi-fra.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en français - Barre de navigation du GC - Ouvrir une session</a></li>
+	<li><a href="signout/tso-eng.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en anglais - Barre de navigation du GC - Fermer la session</a></li>
+	<li><a href="signout/tso-fra.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en français - Barre de navigation du GC - Fermer la session</a></li>
+	<li><a href="signout/csi-eng.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en anglais - Contenu de la page - Ouvrir une session</a></li>
+	<li><a href="signout/csi-fra.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en français - Contenu de la page - Ouvrir une session</a></li>
+	<li><a href="signout/cso-eng.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en anglais - Contenu de la page - Fermer la session</a></li>
+	<li><a href="signout/cso-fra.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en français - Contenu de la page - Fermer la session</a></li>
+	<li><a href="signout/bsi-eng.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en anglais - Fil d'ariane - Ouvrir une session</a></li>
+	<li><a href="signout/bsi-fra.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en français - Fil d'ariane - Ouvrir une session</a></li>
+	<li><a href="signout/bso-eng.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en anglais - Fil d'ariane - Fermer la session</a></li>
+	<li><a href="signout/bso-fra.html"><span class="wb-invisible">Ouvrir une session/Fermer la session - </span>Exemple en français - Fil d'ariane - Fermer la session</a></li>
 </ul>
 </section>
 </div>
